--- a/CodeQuiz.vcxproj
+++ b/CodeQuiz.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="ImageButton.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Quiz.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="StageSelectScene.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="ImageButton.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Mouse.h" />
     <ClInclude Include="Quiz.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="StageSelectScene.h" />
